--- a/src/pages/pl/for-founders.astro
+++ b/src/pages/pl/for-founders.astro
@@ -2,7 +2,11 @@
 import BaseLayout from "../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout lang="pl" title="Dla founderów">
+<BaseLayout
+  lang="pl"
+  title="Od pomysłu do MVP i produkcji"
+  description="Pomagamy founderom przejść od pomysłu do działającego systemu. MVP, prototypy i pierwsze wdrożenia z jasnym planem rozwoju produktu."
+>
   <section class="section">
     <h1>Masz pomysł na aplikację lub system.</h1>
 
