--- a/src/pages/en/case-studies/[slug].astro
+++ b/src/pages/en/case-studies/[slug].astro
@@ -14,7 +14,11 @@ const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
 
-<BaseLayout lang="en" title={entry.data.title}>
+<BaseLayout
+  lang="en"
+  path={`/case-studies/${entry.slug}/`}
+  title={entry.data.title}
+>
   <section class="section">
     <a class="btn" href="/en/case-studies/">← Back to list</a>
   </section>
