--- a/src/pages/en/services/deployment/index.astro
+++ b/src/pages/en/services/deployment/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../../../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout lang="en" title="Services – Deployment">
+<BaseLayout lang="en" path="/services/deployment/" title="Services – Deployment">
   <section class="section">
     <h1>Deployment</h1>
 
