--- a/src/pages/pl/for-founders.astro
+++ b/src/pages/pl/for-founders.astro
@@ -4,6 +4,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 
 <BaseLayout
   lang="pl"
+  path="/for-founders/"
   title="Od pomysłu do MVP i produkcji"
   description="Pomagamy founderom przejść od pomysłu do działającego systemu. MVP, prototypy i pierwsze wdrożenia z jasnym planem rozwoju produktu."
 >
