--- a/src/pages/pl/how-we-work.astro
+++ b/src/pages/pl/how-we-work.astro
@@ -4,6 +4,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 
 <BaseLayout
   lang="pl"
+  path="/how-we-work/"
   title="Jak dowozimy systemy produkcyjne"
   description="Jak pracujemy w RocketDeploy: przewidywalny proces, jasny zakres i production mindset od pierwszego dnia. Architektura, implementacja i wdrożenie."
 >
