--- a/src/pages/pl/oferta/programowanie/index.astro
+++ b/src/pages/pl/oferta/programowanie/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../../../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout lang="pl" title="Oferta – Programowanie">
+<BaseLayout lang="pl" path="/oferta/programowanie/" title="Oferta – Programowanie">
   <section class="section">
     <h1>Programowanie</h1>
 
