--- a/src/pages/pl/oferta/projektowanie/index.astro
+++ b/src/pages/pl/oferta/projektowanie/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../../../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout lang="pl" title="Oferta – Projektowanie">
+<BaseLayout lang="pl" path="/oferta/projektowanie/" title="Oferta – Projektowanie">
   <section class="section">
     <h1>Projektowanie</h1>
 
