--- a/src/pages/pl/oferta/wdrozenie/index.astro
+++ b/src/pages/pl/oferta/wdrozenie/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../../../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout lang="pl" title="Oferta – Wdrożenie">
+<BaseLayout lang="pl" path="/oferta/wdrozenie/" title="Oferta – Wdrożenie">
   <section class="section">
     <h1>Wdrożenie</h1>
 
