--- a/src/pages/en/services/design/index.astro
+++ b/src/pages/en/services/design/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../../../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout lang="en" title="Services – Design">
+<BaseLayout lang="en" routeKey="servicesDesign" title="Services – Design">
   <section class="section">
     <h1>Design</h1>
 
