--- a/src/pages/en/services/development/index.astro
+++ b/src/pages/en/services/development/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../../../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout lang="en" title="Services – Development">
+<BaseLayout lang="en" routeKey="servicesDevelopment" title="Services – Development">
   <section class="section">
     <h1>Development</h1>
 
