--- a/src/pages/pl/oferta/obsluga/index.astro
+++ b/src/pages/pl/oferta/obsluga/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../../../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout lang="pl" title="Oferta – Obsługa po wdrożeniu">
+<BaseLayout lang="pl" routeKey="servicesPostLaunch" title="Oferta – Obsługa po wdrożeniu">
   <section class="section">
     <h1>Obsługa po wdrożeniu</h1>
 
