--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,10 +1,32 @@
 ---
-const { title, description = "", lang = "en" } = Astro.props;
-
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import ContactLauncher from "../components/ContactLauncher.astro";
+import { getRoutePaths } from "../i18n/routes";
+import type { RouteKey, RouteParams } from "../i18n/routes";
+
+type Props = {
+  title?: string;
+  description?: string;
+  lang?: "pl" | "en";
+  routeKey: RouteKey;
+  routeParams?: RouteParams;
+};
+
+const {
+  title,
+  description = "",
+  lang = "en",
+  routeKey,
+  routeParams,
+} = Astro.props as Props;
+
+const baseUrl = "https://rocketdeploy.dev";
+const { pl: plPath, en: enPath } = getRoutePaths(routeKey, routeParams);
+const plUrl = new URL(plPath, baseUrl).toString();
+const enUrl = new URL(enPath, baseUrl).toString();
+const canonicalUrl = lang === "pl" ? plUrl : enUrl;
 ---
 
 <!doctype html>
@@ -19,12 +41,17 @@ import ContactLauncher from "../components/ContactLauncher.astro";
     {description && <meta name="description" content={description} />}
     {description && <meta property="og:description" content={description} />}
     {description && <meta name="twitter:description" content={description} />}
+
+    <link rel="canonical" href={canonicalUrl} />
+    <link rel="alternate" hreflang="pl" href={plUrl} />
+    <link rel="alternate" hreflang="en" href={enUrl} />
+    <link rel="alternate" hreflang="x-default" href={enUrl} />
   </head>
 
   <body>
     <div class="header">
       <div class="container">
-        <Header lang={lang} />
+        <Header lang={lang} routeKey={routeKey} routeParams={routeParams} />
       </div>
     </div>
 
