--- a/src/pages/en/faq/index.astro
+++ b/src/pages/en/faq/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout lang="en" title="FAQ">
+<BaseLayout lang="en" routeKey="faq" title="FAQ">
   <section class="section">
     <h1>FAQ</h1>
 
