--- a/src/pages/en/services/post-launch/index.astro
+++ b/src/pages/en/services/post-launch/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../../../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout lang="en" title="Services – Post-launch support">
+<BaseLayout lang="en" routeKey="servicesPostLaunch" title="Services – Post-launch support">
   <section class="section">
     <h1>Post-launch support</h1>
 
