--- a/src/pages/pl/oferta/infrastruktura/index.astro
+++ b/src/pages/pl/oferta/infrastruktura/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../../../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout lang="pl" title="Oferta – Infrastruktura">
+<BaseLayout lang="pl" routeKey="servicesInfrastructure" title="Oferta – Infrastruktura">
   <section class="section">
     <h1>Infrastruktura</h1>
 
