fix: update LinkedIn URL in ContactLauncher and Footer components

--- a/src/components/ContactLauncher.astro
+++ b/src/components/ContactLauncher.astro
@@ -9,7 +9,7 @@ const {
 
 const email = "hello@rocketdeploy.dev";
 const freelancerUrl = "https://www.freelancer.com/u/D4m1an0101";
-const linkedinUrl = "https://www.linkedin.com/in/profile_name/";
+const linkedinUrl = "https://www.linkedin.com/showcase/rocketdeploy-dev";
 
 const t = {
   pl: {
