--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -42,9 +42,9 @@ const text = lang === "pl"
     </a>
 
     <a
-      href="#"
-      aria-disabled="true"
-      style="opacity:.65; border-bottom: none;"
+      href="https://www.linkedin.com/showcase/rocketdeploy-dev"
+      target="_blank"
+      rel="noreferrer"
     >
       LinkedIn
     </a>
