--- a/src/pages/pl/oferta/obsluga/index.astro
+++ b/src/pages/pl/oferta/obsluga/index.astro
@@ -34,7 +34,7 @@ import BaseLayout from "../../../../layouts/BaseLayout.astro";
     <h2>zasady</h2>
     <div class="card">
       <ul class="check-list" style="margin:0; color: rgba(255,255,255,.72);">
-        <li>dotyczy tylko systemów dowiezionych przez RocketDeploy</li>
+        <li>dotyczy tylko systemów dowiezionych przez rocketdeploy</li>
         <li>czasowo ograniczone (ustalane indywidualnie)</li>
         <li>działanie w określonych godzinach roboczych</li>
         <li>reakcja na krytyczne błędy i problemy produkcyjne</li>
